# vmdl

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
benches/: iai.rs  parse.rs
data/: barrel01.dx90.vtx  barrel01.mdl  barrel01.vvd
examples/: parse.rs  view.rs
examples/common/: error.rs  loader.rs  materials.rs
examples/gltf/: convert.rs  error.rs  loader.rs  main.rs  material.rs
examples/view/: loader.rs  main.rs  material.rs
fuzz/: .gitignore  Cargo.toml  flake.nix
fuzz/fuzz_targets/: mdl.rs  vtx.rs  vvd.rs
src/: compressed_vector.rs  error.rs  lib.rs  shared.rs  vvd.rs
src/data/: header.rs  header2.rs  mod.rs
src/handle/: mod.rs
src/mdl/: bone.rs  header.rs  mod.rs
src/mdl/raw/: animation.rs  bones.rs  header.rs  header2.rs  mod.rs
src/vtx/: mod.rs  raw.rs
src/vvd/: mod.rs  raw.rs
tests/: parse.rs
