[package]
name = "vmdl"
version = "0.1.0"
edition = "2021"
description = "Rust parser for valve model files."
repository = "https://github.com/icewind1991/vmdl"
license = "MIT"
exclude = ["data"]

[dependencies]
arrayvec = "0.7.2"
thiserror = "1.0.37"
static_assertions = "1.1.0"
bitflags = "1.3.2"
itertools = "0.12.0"
tracing = "0.1.37"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"

[dev-dependencies]
three-d = { version = "0.14.0", features = ["egui-gui"] }
miette = { version = "5.5.0", features = ["fancy"] }
criterion = "0.4.0"
iai = "0.1"
vtf = "0.1.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gltf-json = "1.3.0"
gltf = "1.3.0"
image = "0.23.14"
clap = { version = "4.4.11", features = ["derive"] }
main_error = "0.1.2"
vmt-parser = "0.1"
tf-asset-loader = "0.1"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.dev.package."*"]
opt-level = 2