[package]
name = "vmdl"
version = "0.2.0"
edition = "2021"
description = "Rust parser for valve model files."
repository = "https://github.com/icewind1991/vmdl"
license = "MIT"
exclude = ["data"]
rust-version = "1.70.0"

[dependencies]
arrayvec = "0.7.4"
thiserror = "1.0.59"
static_assertions = "1.1.0"
bitflags = "2.5.0"
itertools = "0.12.1"
tracing = "0.1.40"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
num_enum = "0.7.2"

[dev-dependencies]
three-d = { version = "0.14.0", features = ["egui-gui"] }
miette = { version = "7.2.0", features = ["fancy", "derive"] }
criterion = "0.5.1"
iai = "0.1"
vtf = "0.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gltf-json = "=1.3.0"
gltf = "=1.3.0"
image = "0.24.9"
clap = { version = "4.4.18", features = ["derive"] }
main_error = "0.1.2"
vmt-parser = "0.2"
tf-asset-loader = "0.1"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.dev.package."*"]
opt-level = 2
