[package]
name = "vmdl"
version = "0.2.0"
edition = "2021"
description = "Rust parser for valve model files."
repository = "https://github.com/icewind1991/vmdl"
license = "MIT"
exclude = ["data"]
rust-version = "1.74.0"

[dependencies]
arrayvec = "0.7.6"
thiserror = "2.0.7"
static_assertions = "1.1.0"
bitflags = "2.6.0"
itertools = "0.13.0"
tracing = "0.1.41"
bytemuck = { version = "1.20.0", features = ["derive"] }
cgmath = "0.18.0"
num_enum = "0.7.3"
half = "2.4.1"

[dev-dependencies]
three-d = { version = "0.18.0", features = ["egui-gui"] }
three-d-asset = "0.9.1"
miette = { version = "7.4.0", features = ["fancy", "derive"] }
criterion = "0.5.1"
iai = "0.1"
vtf = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
gltf-json = "=1.3.0"
gltf = "=1.3.0"
image = "0.25.5"
clap = { version = "4.5.23", features = ["derive"] }
main_error = "0.1.2"
vmt-parser = "0.2"
tf-asset-loader = "0.1.8"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.dev.package."*"]
opt-level = 2
